# Spralingua_AIAgents_App

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  LEARNINGS.md  README.md  a1_topic_prompts.txt  all_scenarios.txt  app.py  claude_client.py  compare_databases.py  config.py  database.py  feedback_generator.py  fix_existing_records.py  fix_missing_topics.py  gunicorn_config.py  init_user_topics.py  main.py  nixpacks.toml  prompt_manager.py  pyproject.toml  requirements.txt  scenario_translations_data.py  setup_db.py  sync_databases.py  test_db.py  test_docker_db.py  test_dynamic_prompt.py  test_enhanced_prompt.py  test_progress_system.py  topic_differences_a1.txt
.claude/: settings.local.json
auth/: __init__.py  auth_manager.py  auth_routes.py  decorators.py  forms.py
email_writing/: __init__.py  email_feedback_builder.py  email_prompt_builder.py  email_prompts.yaml  exercise_manager.py  letter_templates.py
language/: language_mapper.py
level_rules/: __init__.py  level_rules_manager.py
migrations/: 01_create_level_rules_table.py  02_enhance_topic_definitions.py  03_update_topic1_flow.py  04_add_scenario_templates.py  05_update_topic1_to_5_exchanges.py  06_add_exercise_progress.py  07_add_completion_popup_tracking.py  09_convert_to_16_topics.py  10_simplify_test_prompts.py  11_add_level_to_progress_tables.py  11_add_missing_a1_scenarios.py  11_add_missing_topics_13_16.py  12_populate_a2_topics.py  13_populate_b1_topics.py  14_populate_b2_topics.py  add_scenario_translations.py  create_topic_system_tables.py  create_user_progress_table.py  (+4 more)
models/: user.py  (+8 more)
(+54 files in other folders)
